Add engine graph and connection definition

--- a/schema/engine/operation.yml
+++ b/schema/engine/operation.yml
@@ -1,7 +1,7 @@
 ---
-id: port.json
+id: operation.json
 "$schema": "http://json-schema.org/draft-04/schema"
-title: Port definition
+title: Process Input/Output Operation definition
 description: ""
 type:
 - object
@@ -9,8 +9,8 @@ properties:
   name:
     name: name
     type: string
-    description: Port name
-    example: in
+    description: Operation name
+    example: trigger
   description:
     name: description
     type: string
@@ -21,11 +21,6 @@ properties:
     type: string
     description: Port datatype
     example: string
-  addressable:
-    name: addressable
-    type: boolean
-    description: Whether the port is an addressable ArrayPort
-    example: false
   required:
     name: required
     type: boolean
@@ -39,4 +34,4 @@ properties:
     uniqueItems: true
     items:
       "$ref": "configItem.json"
-required: [name,type,addressable]
+required: [name,type]
