--- a/schema/agent/port.yml
+++ b/schema/agent/port.yml
@@ -10,17 +10,17 @@ properties:
     name: name
     type: string
     description: Port name
-    example: in
+    example: build
   description:
     name: description
     type: string
     description: Longer textual description of the port
-    example: Input YAML to be converted
+    example: Fetch source code and build with maven
   type:
     name: type
     type: string
     description: Port datatype
-    example: string
+    example: operation
   required:
     name: required
     type: boolean
